<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="team"
            type="com.example.crosscountryscoring.database.Team" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/team_name_edit_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@={team.name}"
            android:inputType="textCapWords" />
    </RelativeLayout>
</layout>