<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_race_button"
        android:title="@string/edit_race"
        android:icon="@drawable/baseline_create_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/undo_finisher_button"
        android:title="@string/undo_finisher"
        android:icon="@drawable/ic_baseline_undo_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/end_race_button"
        android:title="@string/end_race"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reset_race_button"
        android:title="@string/reset_race"
        app:showAsAction="collapseActionView"/>
</menu>