<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.example.crosscountryscoring.NullConverter"/>
        <variable
            name="viewModel"
            type="com.example.crosscountryscoring.TeamViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/team_add_finisher_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@{@string/team_score(viewModel.team.name, viewModel.team.score, NullConverter.runnerPlaceToString(context, viewModel.finishers[0].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[1].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[2].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[3].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[4].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[5].place), NullConverter.runnerPlaceToString(context, viewModel.finishers[6].place))}"/>

    </LinearLayout>

</layout>