...
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentRunnerTextView"
            android:text="@{@string/current_race_finisher(Integer.toString(viewModel.race.numberFinishedRunners + 1))}"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"/>

...
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/race_recycler_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_below="@id/currentRunnerTextView"
            android:layout_above="@id/startRaceButton"
            android:layout_margin="8dp"/>
...
