<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/team_finisher_recycler_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="vertical" />

</LinearLayout>